--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,28 +6,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: '18'
-        
-    - name: Clear npm cache
-      run: npm cache clean --force
-        
-    - name: Install dependencies
-      run: npm install --no-optional
-      
-    - name: Verify react-scripts installation
-      run: ls -la node_modules/.bin/react-scripts
-      
-    - name: Build
-      run: npx react-scripts build
-      
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+    - run: npm install -g yarn
+    - run: yarn install
+    - run: yarn build
+    - uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build
