--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,12 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -10,12 +16,11 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: '18'
-    - run: npm install -g yarn
     - run: yarn install
-    - name: Build with warnings allowed
-      run: yarn build
+    - run: yarn build
       env:
         CI: false
+        PUBLIC_URL: /PortFolio-New
     - uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
