--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,16 +24,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: yarn
+          cache: npm
           
       - name: Setup Pages
         uses: actions/configure-pages@v4
         
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: npm install
         
       - name: Build
-        run: yarn build
+        run: npm run build
         env:
           CI: false
           PUBLIC_URL: /PortFolio-New
